--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,8 +8,9 @@
       "name": "Launch Package",
       "type": "go",
       "request": "launch",
-      "mode": "auto",
-      "program": "cmd/main.go"
+      "mode": "debug",
+      "program": "cmd/main.go",
+      "console": "integratedTerminal"
     }
   ]
 }
